[package]
name = "book-safe"
version = "0.2.0"
edition = "2021"
authors = ["David Kleingeld"]
repository = "https://github.com/dvdsk/Book-safe"
description = "Hide the content of folders on the reMarkable between a given period"

[dependencies]
clap = { version = "3", features = ["derive"] }
color-eyre = "0.6"
indextree = "4.3"
time = { version = "0.3", features = ["local-offset"] }
printpdf = "0.5"
trust-dns-resolver = "0.21"
log = "0.4"
simplelog = "0.11"

# optimize any non workspace member for debug builds
# since we will not rebuild them often and a smaller binary 
# copies over faster
[profile.dev.package."*"]
opt-level = 3
