[package]
name = "book-safe"
version = "0.2.0"
edition = "2021"
authors = ["David Kleingeld"]
repository = "https://github.com/dvdsk/Book-safe"
description = "Hide the content of folders on the reMarkable between a given period"
license = "GPL-3.0"
readme = "README.md"
categories = ["cli-tools"]
keywords = ["remarkable"]

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help"] }
color-eyre = "0.6"
thiserror = "1"
indextree = "4.6"
time = { version = "0.3", features = ["local-offset"] }
time-tz = "1"
printpdf = "0.5"
trust-dns-resolver = "0.22"
log = "0.4"
simplelog = "0.12"
itertools = "0.11"
rust-fuzzy-search = "0.1"
regex = "1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
built = "0.7"
float_eq = "1"

# optimize any non workspace member for debug builds
# since we will not rebuild them often and a smaller binary 
# copies over faster
[profile.dev.package."*"]
opt-level = 3

# [profile.release]
# debug = true
